k8-deployment/ecommerce-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-deployment
  namespace: mywebsite
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
      - name: ecommerce-frontend
        image: suresh202/ebuy:latest
        ports:
        - containerPort: 80
