k8-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "sk-buy.twilightparadox.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ecommerce-service 
            port:
              number: 81
